Fixed version issued